--- a/helm/aws-cloud-controller-manager-app/templates/rbac.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/rbac.yaml
@@ -101,7 +101,14 @@ rules:
   - serviceaccounts/token
   verbs:
   - create
-
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
