disable route controller

--- a/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
@@ -36,6 +36,7 @@ spec:
         args:
         - --cloud-provider=aws
         - --port={{ .Values.ports.healthcheck }}
+        - --configure-cloud-routes=false
         - --v=2
         securityContext:
           allowPrivilegeEscalation: false
