Add `config.giantswarm.io/version` annotation to Chart.yaml.

--- a/helm/aws-cloud-controller-manager-app/Chart.yaml
+++ b/helm/aws-cloud-controller-manager-app/Chart.yaml
@@ -9,3 +9,5 @@ restrictions:
   fixedNamespace: kube-system
   gpuInstances: false
   compatibleProviders: [aws]
+annotations:
+  config.giantswarm.io/version: 1.x.x
