--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,9 @@ workflows:
   build:
     jobs:
       - architect/push-to-app-catalog:
-          context: architect
-          name: "push-to-control-plane-app-catalog"
-          app_catalog: "control-plane-catalog"
-          app_catalog_test: "control-plane-test-catalog"
+          name: push-to-giantswarm-app-catalog
+          app_catalog: "giantswarm-catalog"
+          app_catalog_test: "giantswarm-test-catalog"
           chart: "aws-cloud-controller-manager-app"
           filters:
             # Trigger the job also on git tag.
