- Switch to default dnsPolicy to avoid circular dependency with coredns. - Add readinessProbe to make rollouts smoother.

--- a/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
@@ -41,6 +41,14 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           privileged: false
+        readinessProbe:
+          httpGet:
+            host: 127.0.0.1
+            path: /healthz
+            port: {{ .Values.ports.healthcheck }}
+          initialDelaySeconds: 20
+          periodSeconds: 10
+          timeoutSeconds: 5
         livenessProbe:
           httpGet:
             host: 127.0.0.1
