--- a/helm/aws-cloud-controller-manager-app/values.yaml
+++ b/helm/aws-cloud-controller-manager-app/values.yaml
@@ -8,7 +8,7 @@ serviceType: managed
 image:
   registry: quay.io
   name: giantswarm/aws-cloud-controller-manager
-  tag: v1.21.0-alpha.0
+  tag: v1.22.4
 
 resources:
   limits:
