--- a/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
@@ -22,7 +22,6 @@ spec:
         runAsGroup: 0
       serviceAccountName: {{ .Values.name }}
       hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
       tolerations:
       - operator: "Exists"
       nodeSelector:
@@ -41,6 +40,14 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           privileged: false
+        readinessProbe:
+          httpGet:
+            host: 127.0.0.1
+            path: /healthz
+            port: {{ .Values.ports.healthcheck }}
+          initialDelaySeconds: 20
+          periodSeconds: 10
+          timeoutSeconds: 5
         livenessProbe:
           httpGet:
             host: 127.0.0.1
