--- a/helm/aws-cloud-controller-manager-app/Chart.yaml
+++ b/helm/aws-cloud-controller-manager-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 1.21.0-alpha.0
+appVersion: 1.23.2
 description: A Helm chart to run AWS Cloud Controller Manager
 home: https://github.com/giantswarm/aws-cloud-controller-manager-app
 name: aws-cloud-controller-manager-app
