--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,14 @@ workflows:
             tags:
               only: /^v.*/
 
+      - architect/push-to-app-catalog:
+          context: architect
+          name: push-to-default-app-catalog
+          app_catalog: "default-catalog"
+          app_catalog_test: "default-test-catalog"
+          chart: "aws-cloud-controller-manager-app"
+          filters:
+            # Trigger the job also on git tag.
+            tags:
+              only: /^v.*/
 
