Support for running behind a proxy

--- a/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
@@ -37,6 +37,22 @@ spec:
         - --secure-port={{ .Values.ports.healthcheck }}
         - --configure-cloud-routes=false
         - --v=2
+        {{- $proxy := deepCopy .Values.cluster.proxy |  mustMerge .Values.proxy }}
+        {{- if and $proxy.noProxy $proxy.http $proxy.https }}
+        env:
+        - name: NO_PROXY
+          value: {{ $proxy.noProxy }}
+        - name: no_proxy
+          value: {{ $proxy.noProxy }}
+        - name: HTTP_PROXY
+          value: {{ $proxy.http }}
+        - name: http_proxy
+          value: {{ $proxy.http }}
+        - name: HTTPS_PROXY
+          value: {{ $proxy.https }}
+        - name: https_proxy
+          value: {{ $proxy.https }}
+        {{- end }}
         securityContext:
           allowPrivilegeEscalation: false
           privileged: false
