--- a/helm/aws-cloud-controller-manager-app/templates/np.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/np.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      k8s-app: {{ .Values.name }}
+      {{- include "labels.selector" . | nindent 6 }}
   ingress:
   - {}
   egress:
