--- a/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
@@ -37,9 +37,17 @@ spec:
         - --secure-port={{ .Values.ports.healthcheck }}
         - --configure-cloud-routes=false
         - --v=2
+        env:
+        {{- if .Values.k8sServiceHost }}
+        - name: KUBERNETES_SERVICE_HOST
+          value: {{ .Values.k8sServiceHost }}
+        {{- end }}
+        {{- if .Values.k8sServicePort }}
+        - name: KUBERNETES_SERVICE_PORT
+          value: {{ .Values.k8sServicePort }}
+        {{- end }}
         {{- $proxy := deepCopy .Values.cluster.proxy |  mustMerge .Values.proxy }}
         {{- if and $proxy.noProxy $proxy.http $proxy.https }}
-        env:
         - name: NO_PROXY
           value: {{ $proxy.noProxy }}
         - name: no_proxy
