--- a/helm/aws-cloud-controller-manager-app/values.yaml
+++ b/helm/aws-cloud-controller-manager-app/values.yaml
@@ -41,3 +41,8 @@ cluster:
     noProxy:
     http:
     https:
+
+# These values set the `KUBERNETES_SERVICE_HOST` and `KUBERNETES_SERVICE_PORT` environment variables.
+# These are useful when installing the controller without CNI or kube-proxy and we need to find an alternative way for the controller to talk to the k8s API.
+k8sServiceHost: ""
+k8sServicePort: ""
