--- a/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
@@ -10,8 +10,9 @@ spec:
   resourcePolicy:
     containerPolicies:
     - containerName: {{ .Chart.Name }}
-      controlledValues: RequestsAndLimits
-      mode: Auto
+      minAllowed:
+        cpu: "250m"
+        memory: "1024Mi"
   targetRef:
     apiVersion: apps/v1
     kind: DaemonSet
