Added mode and controlledValues

--- a/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
@@ -10,6 +10,8 @@ spec:
   resourcePolicy:
     containerPolicies:
     - containerName: {{ .Chart.Name }}
+      controlledValues: RequestsAndLimits
+      mode: "Auto"
       minAllowed:
         cpu: "200m"
         memory: "300Mi"
