--- a/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
@@ -13,8 +13,8 @@ spec:
       controlledValues: RequestsAndLimits
       mode: Auto
       minAllowed:
-        cpu: "200m"
-        memory: "300Mi"
+        cpu: {{ .Values.verticalPodAutoscaler.minAllowed.cpu }}
+        memory: {{ .Values.verticalPodAutoscaler.minAllowed.memory }}
   targetRef:
     apiVersion: apps/v1
     kind: DaemonSet
