--- a/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/vpa.yaml
@@ -12,6 +12,9 @@ spec:
     - containerName: {{ .Chart.Name }}
       controlledValues: RequestsAndLimits
       mode: Auto
+      minAllowed:
+        cpu: {{ .Values.verticalPodAutoscaler.minAllowed.cpu }}
+        memory: {{ .Values.verticalPodAutoscaler.minAllowed.memory }}
   targetRef:
     apiVersion: apps/v1
     kind: DaemonSet
