--- a/helm/aws-cloud-controller-manager-app/templates/rbac.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/rbac.yaml
@@ -14,6 +14,7 @@ metadata:
   labels:
     {{- include "labels.common" . | nindent 4 }}
 rules:
+{{- if not .Values.global.podSecurityStandards.enforced }}
 - apiGroups:
   - extensions
   resources:
@@ -22,6 +23,7 @@ rules:
   - {{ .Values.name }}
   verbs:
   - use
+{{- end }}
 - apiGroups:
   - ""
   resources:
