--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,22 +6,30 @@ orbs:
 workflows:
   build:
     jobs:
-      - architect/push-to-app-catalog:
-          name: push-to-default-catalog
-          context: architect
-          chart: aws-cloud-controller-manager-app
-          app_catalog: default-catalog
-          app_catalog_test: default-test-catalog
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-catalog:
+        name: push-to-default-catalog
+        context: architect
+        chart: aws-cloud-controller-manager-app
+        app_catalog: default-catalog
+        app_catalog_test: default-test-catalog
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-catalog:
-          name: push-to-giantswarm-catalog
-          context: architect
-          chart: aws-cloud-controller-manager-app
-          app_catalog: giantswarm-catalog
-          app_catalog_test: giantswarm-test-catalog
-          filters:
-            tags:
-              only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
+    - architect/push-to-app-catalog:
+        name: push-to-giantswarm-catalog
+        context: architect
+        chart: aws-cloud-controller-manager-app
+        app_catalog: giantswarm-catalog
+        app_catalog_test: giantswarm-test-catalog
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
