Adapt app to be PSS compliant

--- a/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
+++ b/helm/aws-cloud-controller-manager-app/templates/daemonset.yaml
@@ -18,8 +18,9 @@ spec:
     spec:
       priorityClassName: system-node-critical
       securityContext:
-        runAsUser: 0
-        runAsGroup: 0
+        {{- with .Values.podSecurityContext }}
+          {{- . | toYaml | nindent 8 }}
+        {{- end }}
       serviceAccountName: {{ .Values.name }}
       hostNetwork: true
       tolerations:
@@ -62,8 +63,9 @@ spec:
           value: {{ $proxy.https }}
         {{- end }}
         securityContext:
-          allowPrivilegeEscalation: false
-          privileged: false
+          {{- with .Values.securityContext }}
+            {{- . | toYaml | nindent 10 }}
+          {{- end }}
         readinessProbe:
           httpGet:
             host: 127.0.0.1
