--- a/helm/aws-cloud-controller-manager-app/Chart.yaml
+++ b/helm/aws-cloud-controller-manager-app/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 name: aws-cloud-controller-manager-app
 description: A Helm chart to run AWS Cloud Controller Manager.
-version: 0.0.1-dev
-appVersion: 0.0.1-dev
+version: 1.30.3-gs1
+appVersion: 1.30.3
 home: https://github.com/giantswarm/aws-cloud-controller-manager-app
 icon: https://s.giantswarm.io/app-icons/aws/2/dark.svg
 annotations:
